--- a/npm-audit.html
+++ b/npm-audit.html
@@ -47,7 +47,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            16
+                            17
                         </h5>
                         <p class="card-text">Dependencies</p>
                     </div>
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            August 9th 2020, 3:12:34 pm
+                            August 28th 2020, 6:09:18 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
