--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            October 12th 2020, 2:52:37 pm
+                            October 13th 2020, 8:32:03 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
