--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            October 13th 2020, 9:24:57 am
+                            October 21st 2020, 5:25:12 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
