--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            October 21st 2020, 10:18:55 am
+                            October 24th 2020, 2:32:38 pm
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
